--- a/star_galaxy_separation.ipynb
+++ b/star_galaxy_separation.ipynb
@@ -23,19 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d586790b-1cc6-443e-bcca-369ce4a5a2fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Number of objects, Number of columns) =  (237094, 111)\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading the catalog in a given band\n",
     "paths   = { \n",
     "    'input'  :'/users/nestrada/Documents/Game/band_catalogues/complete_galflag_catalog_m0416_r_header.cat',\n",
     "    'output' :'/users/nestrada/Documents/Game/band_catalogues/output_sg.cat'\n",
     "}\n",
-    "df_brilliant = pd.read_csv('/Users/nestrada/Documents/Game/df_brilliant.cat',sep=' ',escapechar='#')\n",
-    "catalog = np.loadtxt(paths['input_r']) \n",
-    "output  = paths['output_r']\n",
+    "catalog = np.loadtxt(paths['input']) \n",
+    "output  = paths['output']\n",
     "\n",
     "print(\"(Number of objects, Number of columns) = \",catalog.shape)"
    ]
