--- a/star_galaxy_separation.ipynb
+++ b/star_galaxy_separation.ipynb
@@ -18,7 +18,8 @@
     "from matplotlib import rcParams\n",
     "from matplotlib import pyplot as plt\n",
     "logging.basicConfig(level=logging.INFO)\n",
-    "rcParams[\"font.size\"] = 12"
+    "rcParams[\"font.size\"] = 12\n",
+    "\n"
    ]
   },
   {
@@ -88,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
